--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ matplotlib = "^3.10.1"
 plotly = "^6.0.0"
 folium = "^0.19.5"
 streamlit-folium = "^0.24.0"
+psycopg2-binary = "^2.9.10"
+cryptography = "^44.0.2"
 
 
 [build-system]
