--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ folium = "^0.19.5"
 streamlit-folium = "^0.24.0"
 psycopg2-binary = "^2.9.10"
 cryptography = "^44.0.2"
+python-dotenv = "^1.0.1"
 
 
 [build-system]
